examples/test/testpolicy14769.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy14769
  namespace: namespace495
spec:
  podSelector:
    matchLabels:
      key49: value49
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key34: value19
          key48: value18
      podSelector:
        matchLabels:
          key11: value38
          key26: value25
          key12: value28
